--- a/service/package.json
+++ b/service/package.json
@@ -2,6 +2,7 @@
   "name": "service",
   "version": "1.0.0",
   "description": "nearbud services",
+  "type": "commonjs",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -9,7 +10,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.20.3",
     "express": "^4.21.2",
+    "express-async-handler": "^1.2.0",
     "pg": "^8.13.1",
     "winston": "^3.17.0",
     "winston-daily-rotate-file": "^5.0.0"
