--- a/service/package.json
+++ b/service/package.json
@@ -5,14 +5,21 @@
   "type": "commonjs",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "nodemon index.js",
+    "deploy": "firebase deploy --only functions:api"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.8.1",
     "body-parser": "^1.20.3",
+    "dayjs": "^1.11.13",
     "express": "^4.21.2",
     "express-async-handler": "^1.2.0",
+    "firebase-admin": "^13.2.0",
+    "firebase-functions": "^6.3.2",
+    "jsonwebtoken": "^9.0.2",
     "pg": "^8.13.1",
     "winston": "^3.17.0",
     "winston-daily-rotate-file": "^5.0.0"
