--- a/service/package.json
+++ b/service/package.json
@@ -15,6 +15,7 @@
     "axios": "^1.8.1",
     "body-parser": "^1.20.3",
     "dayjs": "^1.11.13",
+    "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "express-async-handler": "^1.2.0",
     "firebase-admin": "^13.2.0",
