--- a/service/package.json
+++ b/service/package.json
@@ -6,8 +6,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon index.js",
-    "deploy": "firebase deploy --only functions:api"
+    "start": "node index.js"
   },
   "author": "",
   "license": "ISC",
