--- a/service/package.json
+++ b/service/package.json
@@ -20,6 +20,7 @@
     "firebase-admin": "^13.2.0",
     "firebase-functions": "^6.3.2",
     "jsonwebtoken": "^9.0.2",
+    "nodemailer": "^6.10.0",
     "pg": "^8.13.1",
     "winston": "^3.17.0",
     "winston-daily-rotate-file": "^5.0.0"
